--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,33 @@
-venv/
-env
-env/
-myenv/
+# Python
+*.pyc
+*~
+__pycache__
 
+# Env
+.env
+myvenv/
+venv/
+env/
+
+# Database
+db.sqlite3
+
+# Static folder at project root
+/static/
+
+# macOS
+._*
+.DS_Store
+.fseventsd
+.Spotlight-V100
+
+# Windows
+Thumbs.db*
+ehthumbs*.db
+[Dd]esktop.ini
+$RECYCLE.BIN/
+
+# Visual Studio
+.vscode/
+.history/
+*.code-workspace
